--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Logo Margaux Vacqueyra(s)" class="logo" />
+    <img src="logo.png" alt="Logo Margaux Vacqueyra(s)" class="logo" />
     <h1>Margaux Vacqueyra(s)</h1>
     <p class="subtitle">Entre Deux Mers</p>
   </header>
