--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <style>
+    body {
+      font-family: 'Playfair Display', serif;
+    }
+  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Margaux Vacqueyra(s) – Entre Deux Mers</title>
@@ -9,7 +15,7 @@
 <body>
   <header>
     <img src="logo.png" alt="Logo Margaux Vacqueyra(s)" class="logo" />
-    <h1>Margaux Vacqueyra(s)</h1>
+    <h1 style="font-family: 'Playfair Display', serif;"><a href="https://jacquotpo.github.io/Mon-site/" style="text-decoration: none; color: inherit;">Margaux Vacqueyra(s)</a></h1>
     <p class="subtitle">Entre Deux Mers</p>
   </header>
 
