--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <section class="terroirs">
       <h2>Nos Terroirs</h2>
       <p>
-        Nous mettons en avant les richesses des terroirs , offrant une diversité de saveurs et d'arômes uniques.
+        Nous mettons en avant les richesses des terroirs de l'Entre-Deux-Mers, offrant une diversité de saveurs et d'arômes uniques.
       </p>
     </section>
 
     <section class="contact">
       <h2>Contact</h2>
       <p>
-        📍 Basé à Nancy<br />
+        📍 Basé à Bordeaux<br />
         📧 <a href="mailto:contact@margauxvaqueryas.com">contact@margauxvaqueryas.com</a>
       </p>
     </section>
