--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
         Bienvenue chez Margaux Vacqueyra(s), votre caviste spécialisé dans la sélection de vins rares et confidentiels. Que ce soit pour des repas entre amis ou des cadeaux d'entreprise, découvrez nos coffrets exclusifs.
       </p>
     </section>
+<section id="champagne-mallol">
+  <h2>Champagne Mallol-Gantois – Cramant Grand Cru</h2>
+  <p>
+    Issu du prestigieux village de Cramant, classé Grand Cru dans la Côte des Blancs, ce champagne 100% Chardonnay exprime avec finesse la pureté de son terroir crayeux. Au nez, des arômes élégants de pomme verte, de brioche et de citron s'entrelacent. En bouche, une texture légère et crémeuse révèle une belle minéralité et une finale longue et saline.
+  </p>
+  <p>
+    Cette cuvée, élaborée selon la méthode traditionnelle avec une fermentation en bouteille, est idéale pour accompagner des plats délicats tels qu'un curry de poisson léger ou une omelette au saumon et au fenouil.
+  </p>
+  <img src="images/champagne-mallol.jpg" alt="Champagne Mallol-Gantois Grand Cru Cramant" class="vin-photo" />
+</section>
 
     <section class="terroirs">
       <h2>Nos Terroirs</h2>
