--- a/index.html
+++ b/index.html
@@ -1,55 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <style>
-    body {
-      font-family: 'Playfair Display', serif;
-    }
-  </style>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Margaux Vacqueyra(s) – Entre Deux Mers</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <img src="logo.png" alt="Logo Margaux Vacqueyra(s)" class="logo" />
-    <h1 style="font-family: 'Playfair Display', serif;"><a href="https://jacquotpo.github.io/Mon-site/" style="text-decoration: none; color: inherit;">Margaux Vacqueyra(s)</a></h1>
+    <h1><a href="https://jacquotpo.github.io/Mon-site/" style="text-decoration: none; color: inherit;">Margaux Vacqueyra(s)</a></h1>
     <p class="subtitle">Entre Deux Mers</p>
   </header>
 
+  <nav>
+    <a href="#champagne-mallol">Champagne</a>
+  </nav>
+
   <main>
-    <section class="intro">
-      <h2>Des bouteilles rares pour des moments uniques</h2>
+    <section id="champagne-mallol">
+      <h2>Champagne Mallol-Gantois – Cramant Grand Cru</h2>
       <p>
-        Bienvenue chez Margaux Vacqueyra(s), votre caviste spécialisé dans la sélection de vins rares et confidentiels. Que ce soit pour des repas entre amis ou des cadeaux d'entreprise, découvrez nos coffrets exclusifs.
+        Issu du prestigieux village de Cramant, classé Grand Cru dans la Côte des Blancs, ce champagne 100% Chardonnay exprime avec finesse la pureté de son terroir crayeux. Au nez, des arômes élégants de pomme verte, de brioche et de citron s'entrelacent. En bouche, une texture légère et crémeuse révèle une belle minéralité et une finale longue et saline.
       </p>
-    </section>
-<section id="champagne-mallol">
-  <h2>Champagne Mallol-Gantois – Cramant Grand Cru</h2>
-  <p>
-    Issu du prestigieux village de Cramant, classé Grand Cru dans la Côte des Blancs, ce champagne 100% Chardonnay exprime avec finesse la pureté de son terroir crayeux. Au nez, des arômes élégants de pomme verte, de brioche et de citron s'entrelacent. En bouche, une texture légère et crémeuse révèle une belle minéralité et une finale longue et saline.
-  </p>
-  <p>
-    Cette cuvée, élaborée selon la méthode traditionnelle avec une fermentation en bouteille, est idéale pour accompagner des plats délicats tels qu'un curry de poisson léger ou une omelette au saumon et au fenouil.
-  </p>
-  <img src="images/champagne-mallol.jpg" alt="Champagne Mallol-Gantois Grand Cru Cramant" class="vin-photo" />
-</section>
-
-    <section class="terroirs">
-      <h2>Nos Terroirs</h2>
       <p>
-        Nous mettons en avant les richesses des terroirs de l'Entre-Deux-Mers, offrant une diversité de saveurs et d'arômes uniques.
+        Cette cuvée, élaborée selon la méthode traditionnelle avec une fermentation en bouteille, est idéale pour accompagner des plats délicats tels qu'un curry de poisson léger ou une omelette au saumon et au fenouil.
       </p>
-    </section>
-
-    <section class="contact">
-      <h2>Contact</h2>
-      <p>
-        📍 Basé à Bordeaux<br />
-        📧 <a href="mailto:contact@margauxvaqueryas.com">contact@margauxvaqueryas.com</a>
-      </p>
+      <img src="champagne-mallol.jpg" alt="Champagne Mallol-Gantois Grand Cru Cramant" class="vin-photo" />
     </section>
   </main>
 
