--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>
         Cette cuvée, élaborée selon la méthode traditionnelle avec une fermentation en bouteille, est idéale pour accompagner des plats délicats tels qu'un curry de poisson léger ou une omelette au saumon et au fenouil.
       </p>
-      <img src="champagne-mallol.jpg" alt="Champagne Mallol-Gantois Grand Cru Cramant" class="vin-photo" />
+      <img src="./champagne-mallol.jpg" alt="Champagne Mallol-Gantois Grand Cru Cramant" class="vin-photo" />
     </section>
   </main>
 
