--- a/index.html
+++ b/index.html
@@ -10,31 +10,54 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo Margaux Vacqueyra(s)" class="logo" />
-    <h1><a href="https://jacquotpo.github.io/Mon-site/" style="text-decoration: none; color: inherit;">Margaux Vacqueyra(s)</a></h1>
+    <img src="logo.png" alt="Logo MV" class="logo" />
+    <h1>Margaux Vacqueyra(s)</h1>
     <p class="subtitle">Entre Deux Mers</p>
   </header>
 
   <nav>
-    <a href="#champagne-mallol">Champagne</a>
+    <a href="#univers">Notre univers</a>
+    <a href="#selections">Nos sélections</a>
+    <a href="#coffrets">Coffrets</a>
+    <a href="#galerie">Galerie</a>
+    <a href="#contact">Contact</a>
   </nav>
 
   <main>
-    <section id="champagne-mallol">
-      <h2>Champagne Mallol-Gantois – Cramant Grand Cru</h2>
-      <p>
-        Issu du prestigieux village de Cramant, classé Grand Cru dans la Côte des Blancs, ce champagne 100% Chardonnay exprime avec finesse la pureté de son terroir crayeux. Au nez, des arômes élégants de pomme verte, de brioche et de citron s'entrelacent. En bouche, une texture légère et crémeuse révèle une belle minéralité et une finale longue et saline.
-      </p>
-      <p>
-        Cette cuvée, élaborée selon la méthode traditionnelle avec une fermentation en bouteille, est idéale pour accompagner des plats délicats tels qu'un curry de poisson léger ou une omelette au saumon et au fenouil.
-      </p>
-      <img src="champagne1.jpg
-        " alt="Champagne Mallol-Gantois Grand Cru Cramant" class="vin-photo" />
+    <section id="univers">
+      <h2>Notre univers</h2>
+      <p>Margaux Vacqueyra(s) est née d’un désir sincère de partager des bouteilles rares, sélectionnées avec exigence pour accompagner les plus beaux instants. Notre maison défend l’élégance du vin et la simplicité des moments partagés.</p>
+    </section>
+
+    <section id="selections">
+      <h2>Nos sélections</h2>
+      <p>Champagnes Grand Cru, spiritueux confidentiels, flacons d’exception : découvrez nos trésors, sélectionnés chez des vignerons exigeants et passionnés.</p>
+    </section>
+
+    <section id="coffrets">
+      <h2>Coffrets découverte</h2>
+      <p>Nous composons des coffrets sur-mesure pour vos cadeaux d'affaires, événements professionnels ou attentions particulières. Chaque coffret est une expérience.</p>
+    </section>
+
+    <section id="galerie">
+      <h2>Galerie</h2>
+      <div class="gallery">
+        <img src="https://tse3.mm.bing.net/th?id=OIP.qrm2HXxoBZ5trjZ4QpGyZAHaFj?pid=Api" alt="Coffret">
+        <img src="https://tse4.mm.bing.net/th?id=OIP.wdeyeLzD37a59JBvIeNnjwHaJ4?pid=Api" alt="Bouteilles">
+        <img src="https://tse3.mm.bing.net/th?id=OIP.hRmXUiOPkXXijsWHM1JNMAHaHa?pid=Api" alt="Ambiance">
+      </div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p><strong>Email :</strong> contact@margauxvaqueyras.com</p>
+      <p><strong>Téléphone :</strong> 06 00 00 00 00</p>
+      <p><strong>Adresse :</strong> 2 Boulevard Charlemagne, 54000 Nancy</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Margaux Vacqueyra(s) – Entre Deux Mers</p>
+    <p>© 2025 Margaux Vacqueyra(s) – Tous droits réservés.</p>
   </footer>
 </body>
 </html>
