--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <img src="logo.png" alt="Logo MV" class="logo" />
     <h1>Margaux Vacqueyra(s)</h1>
     <p class="subtitle">Entre Deux Mers</p>
+    <p class="accroche">Des bouteilles rares pour des instants précieux.</p>
   </header>
 
   <nav>
@@ -26,17 +27,38 @@
   <main>
     <section id="univers">
       <h2>Notre univers</h2>
-      <p>Margaux Vacqueyra(s) est née d’un désir sincère de partager des bouteilles rares, sélectionnées avec exigence pour accompagner les plus beaux instants. Notre maison défend l’élégance du vin et la simplicité des moments partagés.</p>
+      <p>
+        Margaux Vacqueyra(s) est née d’un goût sincère pour la rareté et l’authenticité. 
+        Ici, pas de grand discours, mais des choix pointus. Nous sélectionnons chaque bouteille comme un bijou à partager, entre amateurs exigeants.
+      </p>
+      <p>
+        Notre univers, c’est celui de la simplicité élégante, de la convivialité raffinée, des histoires racontées autour d’un verre. 
+        Nous croyons au lien, au temps, au soin.
+      </p>
     </section>
 
     <section id="selections">
       <h2>Nos sélections</h2>
-      <p>Champagnes Grand Cru, spiritueux confidentiels, flacons d’exception : découvrez nos trésors, sélectionnés chez des vignerons exigeants et passionnés.</p>
+      <p>
+        Nous ne proposons que des bouteilles que nous aimerions offrir. 
+        Champagnes confidentiels, cuvées rares, spiritueux de caractère, domaines méconnus : chaque référence est une rencontre.
+      </p>
+      <ul>
+        <li>Champagnes Grand Cru en direct de vignerons</li>
+        <li>Spiritueux choisis pour leur finesse ou leur originalité</li>
+        <li>Vins de garde et millésimes singuliers</li>
+      </ul>
     </section>
 
     <section id="coffrets">
       <h2>Coffrets découverte</h2>
-      <p>Nous composons des coffrets sur-mesure pour vos cadeaux d'affaires, événements professionnels ou attentions particulières. Chaque coffret est une expérience.</p>
+      <p>
+        Pour vos cadeaux d’entreprise, vos remerciements ou vos attentions particulières, nous composons des coffrets sur mesure.
+      </p>
+      <p>
+        Élégance du conditionnement, sélection personnalisée, livraison soignée : chaque coffret Margaux Vacqueyra(s) est une signature.
+      </p>
+      <p><em>Professionnels : contactez-nous pour un devis personnalisé.</em></p>
     </section>
 
     <section id="galerie">
@@ -53,6 +75,16 @@
       <p><strong>Email :</strong> contact@margauxvaqueyras.com</p>
       <p><strong>Téléphone :</strong> 06 00 00 00 00</p>
       <p><strong>Adresse :</strong> 2 Boulevard Charlemagne, 54000 Nancy</p>
+
+      <form>
+        <label for="nom">Nom :</label><br>
+        <input type="text" id="nom" name="nom"><br>
+        <label for="email">Email :</label><br>
+        <input type="email" id="email" name="email"><br>
+        <label for="message">Message :</label><br>
+        <textarea id="message" name="message"></textarea><br>
+        <button type="submit">Envoyer</button>
+      </form>
     </section>
   </main>
 
