--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <p class="subtitle">Entre Deux Mers</p>
     <p class="accroche">Des bouteilles rares pour des instants précieux.</p>
   </header>
+<section class="fiche-bouteille">
+  <h2>Champagne Mallol-Gantois – Cramant Grand Cru</h2>
+  <img src="images/mallol-gantois.jpg" alt="Champagne Mallol-Gantois" class="bouteille-img">
+  <p>
+    Ce champagne 100% Chardonnay provient du village classé Grand Cru de Cramant. Nez floral et minéral, bouche élégante, finale saline. 
+    Idéal pour les grandes occasions et les amateurs de finesse.
+  </p>
+</section>
 
   <nav>
     <a href="#univers">Notre univers</a>
